# helpcenter-backend

./: .gitlab-ci.yaml  README.md  env.example
.forgejo/actions/setup-uv/: action.yaml
.forgejo/workflows/: ci.yaml  test.yaml
.github/actions/setup-uv/: action.yaml
.github/workflows/: ci.yaml  cloudrun-deploy.yaml  deploy.yaml  test.yaml
.woodpecker/: ci-test.yml  main.yml
common/core/: db.py  rate_limiting.py  security.py  settings.py
common/domain/dtos/: feedback.py  guide.py
common/domain/resolvers/: __init__.py  feedback.py
common/domain/rest/: __init__.py  categories.py  editor_guard.py  feedback.py  guides.py  media.py
common/repositories/: feedback.py  guide.py
common/services/: feedback.py  media.py
editor_api/: main.py  pyproject.toml
graphql_api/: main.py  pyproject.toml
graphql_api/migrations/versions/: a9ae45e04cf3_init_full_schema.py
tests/integration/: conftest.py
tests/integration/editor_api/: test_categories_rest.py  test_feedback_rest.py  test_guides_rest.py  test_media_rest.py
tests/integration/graphql_api/media/: test_media_graphql.py
