[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "helpcenter-editor-api"
version = "1.0.0"
description = "Editor API for Help Center Backend"
requires-python = ">=3.11"
dependencies = [
    "helpcenter-common @ file://../common",
    "fastapi",
    "functions-framework",
]

[tool.uv]
dev-dependencies = []
